--- a/learning/courses/variational-algorithm-design/ansaetze-and-variational-forms.ipynb
+++ b/learning/courses/variational-algorithm-design/ansaetze-and-variational-forms.ipynb
@@ -153,7 +153,7 @@
     "If you do not have any information about your particular problem that can help restrict the dimensionality, you can try an arbitrary family of parameterized circuits with fewer than $2^{2n}$ parameters. However, there are some trade-offs to consider:\n",
     "\n",
     "- **Speed**: By reducing the search space, the algorithm can run faster.\n",
-    "- **Accuracy**: However, reducing the space could risk excluding the actual solution to the problem, leading to suboptimal solutions.\n",
+    "- **Accuracy**: Reducing the space could risk excluding the actual solution to the problem, leading to suboptimal solutions.\n",
     "- **Noise**: Deeper circuits are affected by noise, so we need to experiment with our ansatz's connectivity, gates, and gate fidelity.\n",
     "\n",
     "There is a fundamental trade-off between quality (or even solvability) and speed: the more parameters, the more likely you are to find a precise result, but the longer it will take to run the algorithm."
@@ -167,7 +167,7 @@
    "source": [
     "### N-local circuits\n",
     "\n",
-    "One of the most widely used examples of heuristic ansaetze is the [N-local circuits](https://docs.quantum-computing.ibm.com/api/qiskit/qiskit.circuit.library.NLocal), for a few reasons:\n",
+    "One of the most widely used examples of heuristic ansaetze is the [N-local circuits](/docs/api/qiskit/qiskit.circuit.library.NLocal), for a few reasons:\n",
     "\n",
     "- **Efficient implementation**: The N-local ansatz is typically composed of simple, local gates that can be implemented efficiently on a quantum computer, using a small number of physical qubits. This makes it easier to construct and optimize quantum circuits.\n",
     "- **Captures important correlations**: The N-local ansatz can capture important correlations between the qubits in a quantum system, even with a small number of gates. This is because the local gates can act on neighboring qubits and create entanglement between them, which can be important for simulating complex quantum systems.\n",
@@ -175,12 +175,12 @@
     "These circuits consist of rotation and entanglement layers that are repeated alternatively one or more times as follows:\n",
     "\n",
     "- Each layer is formed by gates of size at most $N$, where $N$ has to be lower than the number of qubits.\n",
-    "- For a rotation layer, the gates are stacked on top of each other. We can use standard rotation operations, such as [`RX`](https://docs.quantum-computing.ibm.com/api/qiskit/qiskit.circuit.library.RXGate) or [`CRZ`](https://docs.quantum-computing.ibm.com/api/qiskit/qiskit.circuit.library.CRZGate).\n",
-    "- For an entanglement layer, we can use gates like [`Toffoli` gates](https://docs.quantum-computing.ibm.com/api/qiskit/qiskit.circuit.library.CCXGate) or [`CX`](https://docs.quantum-computing.ibm.com/api/qiskit/qiskit.circuit.library.CXGate) with an entanglement strategy.\n",
+    "- For a rotation layer, the gates are stacked on top of each other. We can use standard rotation operations, such as [`RX`](/docs/api/qiskit/qiskit.circuit.library.RXGate) or [`CRZ`](/docs/api/qiskit/qiskit.circuit.library.CRZGate).\n",
+    "- For an entanglement layer, we can use gates like [`Toffoli` gates](/docs/api/qiskit/qiskit.circuit.library.CCXGate) or [`CX`](/docs/api/qiskit/qiskit.circuit.library.CXGate) with an entanglement strategy.\n",
     "- Both types of layers can be parameterized or not, but at least one of them needs to contain parameters. Otherwise, without at least one parameter, there wouldn't be any variations!\n",
     "- Optionally, an extra rotation layer is added to the end of the circuit.\n",
     "\n",
-    "For example, let's create a $5$-qubit [`NLocal`](https://docs.quantum-computing.ibm.com/api/qiskit/qiskit.circuit.library.NLocal) circuit with rotation blocks formed by [`RX`](https://docs.quantum-computing.ibm.com/api/qiskit/qiskit.circuit.library.RXGate) and [`CRZ`](https://docs.quantum-computing.ibm.com/api/qiskit/qiskit.circuit.library.CRZGate) gates, entanglement blocks formed by [`Toffoli` gates](https://docs.quantum-computing.ibm.com/api/qiskit/qiskit.circuit.library.CCXGate) that act on qubits $[0,1,2]$, $[0,2,3]$, $[4,2,1]$ and $[3,1,0]$ and $2$ repetitions of each layer."
+    "For example, let's create a five-qubit [`NLocal`](/docs/api/qiskit/qiskit.circuit.library.NLocal) circuit with rotation blocks formed by [`RX`](/docs/api/qiskit/qiskit.circuit.library.RXGate) and [`CRZ`](/docs/api/qiskit/qiskit.circuit.library.CRZGate) gates, entanglement blocks formed by [`Toffoli` gates](/docs/api/qiskit/qiskit.circuit.library.CCXGate) that act on qubits $[0,1,2]$, $[0,2,3]$, $[4,2,1]$ and $[3,1,0]$ and $2$ repetitions of each layer."
    ]
   },
   {
@@ -222,9 +222,9 @@
    "id": "d293b8cc-1512-4a65-a3f7-94a979d1736b",
    "metadata": {},
    "source": [
-    "In the above example, the largest gate is the Toffoli gate, which acts on three qubits, making the circuit $3$-local. The most commonly used type of $N$-local circuits are [$2$-local](https://docs.quantum-computing.ibm.com/api/qiskit/qiskit.circuit.library.TwoLocal) circuits with single-qubit rotation gates and $2$-qubit entanglement gates.\n",
+    "In the above example, the largest gate is the Toffoli gate, which acts on three qubits, making the circuit $3$-local. The most commonly used type of $N$-local circuits are [$2$-local](/docs/api/qiskit/qiskit.circuit.library.TwoLocal) circuits with single-qubit rotation gates and $2$-qubit entanglement gates.\n",
     "\n",
-    "Let's create a $2$-local circuit using Qiskit's [`TwoLocal`](https://docs.quantum-computing.ibm.com/api/qiskit/qiskit.circuit.library.TwoLocal) class. The syntax is the same as `NLocal`, but there are some differences. For instance, most gates, such as `RX`, `RZ`, and `CNOT`, can be passed as strings without importing the gates or creating a `Parameter` instance."
+    "Let's create a $2$-local circuit using Qiskit's [`TwoLocal`](/docs/api/qiskit/qiskit.circuit.library.TwoLocal) class. The syntax is the same as `NLocal`, but there are some differences. For instance, most gates, such as `RX`, `RZ`, and `CNOT`, can be passed as strings without importing the gates or creating a `Parameter` instance."
    ]
   },
   {
@@ -264,7 +264,7 @@
    "id": "a6e80571-9bb4-4e33-9581-2c48cad1a566",
    "metadata": {},
    "source": [
-    "In this case, we used the linear entanglement distribution, where each qubit is entangled with the next. To learn about other strategies, refer to [`TwoLocal`'s documentation](https://docs.quantum-computing.ibm.com/api/qiskit/qiskit.circuit.library.TwoLocal)."
+    "In this case, we used the linear entanglement distribution, where each qubit is entangled with the next. To learn about other strategies, refer to the [`TwoLocal` documentation](/docs/api/qiskit/qiskit.circuit.library.TwoLocal)."
    ]
   },
   {
@@ -275,7 +275,7 @@
    "source": [
     "### EfficientSU2\n",
     "\n",
-    "[`EfficientSU2`](https://docs.quantum-computing.ibm.com/api/qiskit/qiskit.circuit.library.EfficientSU2) is a hardware-efficient circuit that consists of layers of single-qubit operations spanning SU(2) and `CX` entanglements. This is a heuristic pattern that can be used to prepare trial wave functions for variational quantum algorithms or as a classification circuit for machine learning."
+    "[`EfficientSU2`](/docs/api/qiskit/qiskit.circuit.library.EfficientSU2) is a hardware-efficient circuit that consists of layers of single-qubit operations spanning SU(2) and `CX` entanglements. This is a heuristic pattern that can be used to prepare trial wave functions for variational quantum algorithms or as a classification circuit for machine learning."
    ]
   },
   {
@@ -480,7 +480,7 @@
     "\n",
     "With this lesson, you learned how to define your search space with a variational form:\n",
     "\n",
-    "- Prepare states with a _parametrized_ quantum circuit, where gates are defined with tunable parameters.\n",
+    "- Prepare states with a _parametrized_ quantum circuit, where gates are defined with tunable parameters\n",
     "- How to construct ansaetze that tradeoff speed vs accuracy\n",
     "- Heuristic ansaetze\n",
     "- Problem-specific ansaetze\n",
