--- a/learning/courses/variational-algorithm-design/cost-functions.ipynb
+++ b/learning/courses/variational-algorithm-design/cost-functions.ipynb
@@ -10,11 +10,11 @@
     "\n",
     "# Cost functions\n",
     "\n",
-    "During this lesson, we'll learn how to evaluate a *cost function*:\n",
+    "During this lesson, we'll learn how to evaluate a *cost function*.  This lesson consists of the following sections:\n",
     "\n",
-    "- First, we'll learn about [Qiskit Runtime primitives](https://docs.quantum.ibm.com/run/primitives)\n",
+    "- Overview of [Qiskit Runtime primitives](/docs/guides/primitives)\n",
     "- Define a *cost function* $C(\\vec\\theta)$. This is a problem-specific function that defines the problem's goal for the optimizer to minimize (or maximize)\n",
-    "- Defining a measurement strategy with the Qiskit Runtime primitives to [optimize speed vs accuracy](https://docs.quantum-computing.ibm.com/optimize)\n",
+    "- Define a measurement strategy with the Qiskit Runtime primitives to [optimize speed vs accuracy](/docs/guides/optimize)\n",
     "\n",
     "&nbsp;\n",
     "\n",
@@ -38,13 +38,13 @@
     "\n",
     "All physical systems, whether classical or quantum, can exist in different states. For example, a car on a road can have a certain mass, position, speed, or acceleration that characterize its state. Similarly, quantum systems can also have different configurations or states, but they differ from classical systems in how we deal with measurements and state evolution. This leads to unique properties such as *superposition* and *entanglement* that are exclusive to quantum mechanics. Just like we can describe a car's state using physical properties like speed or acceleration, we can also describe the state of a quantum system using *observables*, which are mathematical objects.\n",
     "\n",
-    "In quantum mechanics, states are represented by normalized complex column vectors, or *kets* ($|\\psi\\rangle$), and observables are hermitian linear operators ($\\hat{H}=\\hat{H}^{\\dagger}$) that act on the kets. An eigenvector ($|\\lambda\\rangle$) of an observable is known as an *eigenstate*. Measuring an observable for one of its eigenstates ($|\\lambda\\rangle$) will give us the corresponding eigenvalue ($\\lambda$) as readout.\n",
+    "In quantum mechanics, states are represented by normalized complex column vectors, or *kets* ($|\\psi\\rangle$), and observables are Hermitian linear operators ($\\hat{H}=\\hat{H}^{\\dagger}$) that act on the kets. An eigenvector ($|\\lambda\\rangle$) of an observable is known as an *eigenstate*. Measuring an observable for one of its eigenstates ($|\\lambda\\rangle$) will give us the corresponding eigenvalue ($\\lambda$) as readout.\n",
     "\n",
     "\n",
     "If you're wondering how to measure a quantum system and what you can measure, Qiskit offers two [primitives][primitives] that can help:\n",
     "\n",
-    "* `Sampler`: Given a quantum state $|\\psi\\rangle$, this primitive obtains the probability of each possible computational basis state.\n",
-    "* `Estimator`: Given a quantum observable $\\hat{H}$ and a state $|\\psi\\rangle$, this primitive computes the expected value of $\\hat{H}$.\n",
+    "* Sampler: Given a quantum state $|\\psi\\rangle$, this primitive obtains the probability of each possible computational basis state.\n",
+    "* Estimator: Given a quantum observable $\\hat{H}$ and a state $|\\psi\\rangle$, this primitive computes the expected value of $\\hat{H}$.\n",
     "\n",
     "[primitives]: #definition-tooltip \"Basic and fundamental operations or data type. Qiskit has the Sampler and Estimator primitives to serve as building blocks to easily construct complex algorithmic workloads.\""
    ]
@@ -57,7 +57,7 @@
    "source": [
     "### The Sampler primitive\n",
     "\n",
-    "The `Sampler` primitive calculates the probability of obtaining each possible state $|k\\rangle$ from the computational basis, given a quantum circuit that prepares the state $|\\psi\\rangle$. It calculates\n",
+    "The Sampler primitive calculates the probability of obtaining each possible state $|k\\rangle$ from the computational basis, given a quantum circuit that prepares the state $|\\psi\\rangle$. It calculates\n",
     "\n",
     "$$\n",
     "p_k = |\\langle k | \\psi \\rangle|^2 \\quad \\forall k \\in \\mathbb{Z}_2^n \\equiv \\{0,1,\\cdots,2^n-1\\},\n",
@@ -66,17 +66,17 @@
     "Where $n$ is the number of qubits, and $k$ the integer representation of any possible output binary string $\\{0,1\\}^n$ (i.e. integers base $2$).\n",
     "\n",
     "\n",
-    "[Qiskit Runtime's](https://docs.quantum-computing.ibm.com/api/qiskit-ibm-runtime/qiskit_ibm_runtime.Sampler) `Sampler` runs the circuit multiple times on a quantum device, performing measurements on each run, and reconstructing the probability distribution from the recovered bit strings. The more runs (or *shots*) it performs, the more accurate the results will be, but this requires more time and quantum resources.\n",
+    "The Qiskit Runtime [Sampler](/docs/api/qiskit-ibm-runtime/qiskit_ibm_runtime.Sampler) runs the circuit multiple times on a quantum device, performing measurements on each run, and reconstructing the probability distribution from the recovered bit strings. The more runs (or *shots*) it performs, the more accurate the results will be, but this requires more time and quantum resources.\n",
     "\n",
     "\n",
-    "However, since the number of possible outputs grows exponentially with the number of qubits $n$ (i.e. $2^n$), the number of shots will need to grow exponentially as well in order to capture a _dense_ probability distribution. Therefore, `Sampler` is only efficient for *sparse* probability distributions; where the target state $|\\psi\\rangle$ must be expressible as a linear combination of the computational basis states, with the number of terms growing at most polynomially with the number of qubits:\n",
+    "However, since the number of possible outputs grows exponentially with the number of qubits $n$ (i.e. $2^n$), the number of shots will need to grow exponentially as well in order to capture a _dense_ probability distribution. Therefore, Sampler is only efficient for *sparse* probability distributions; where the target state $|\\psi\\rangle$ must be expressible as a linear combination of the computational basis states, with the number of terms growing at most polynomially with the number of qubits:\n",
     "\n",
     "$$\n",
     "|\\psi\\rangle = \\sum^{\\text{Poly}(n)}_k w_k |k\\rangle.\n",
     "$$\n",
     "\n",
     "\n",
-    "The `Sampler` can also be configured to retrieve probabilities from a subsection of the circuit, representing a subset of the total possible states."
+    "The Sampler can also be configured to retrieve probabilities from a subsection of the circuit, representing a subset of the total possible states."
    ]
   },
   {
@@ -95,16 +95,16 @@
     "### The Estimator primitive\n",
     "\n",
     "\n",
-    "The `Estimator` primitive calculates the expectation value of an observable $\\hat{H}$ for a quantum state $|\\psi\\rangle$; where the observable probabilities can be expressed as $p_\\lambda = |\\langle\\lambda|\\psi\\rangle|^2$, being $|\\lambda\\rangle$ the eigenstates of the observable $\\hat{H}$. The expectation value is then defined as the average of all possible outcomes $\\lambda$ (i.e. the eigenvalues of the observable) of a measurement of the state $|\\psi\\rangle$, weighted by the corresponding probabilities:\n",
+    "The Estimator primitive calculates the expectation value of an observable $\\hat{H}$ for a quantum state $|\\psi\\rangle$; where the observable probabilities can be expressed as $p_\\lambda = |\\langle\\lambda|\\psi\\rangle|^2$, being $|\\lambda\\rangle$ the eigenstates of the observable $\\hat{H}$. The expectation value is then defined as the average of all possible outcomes $\\lambda$ (i.e. the eigenvalues of the observable) of a measurement of the state $|\\psi\\rangle$, weighted by the corresponding probabilities:\n",
     "\n",
     "$$\n",
     "\\langle\\hat{H}\\rangle_\\psi := \\sum_\\lambda p_\\lambda \\lambda = \\langle \\psi | \\hat{H} | \\psi \\rangle\n",
     "$$\n",
     "\n",
     "\n",
-    "However, calculating the expectation value of an observable is not always possible, as we often don't know its eigenbasis. [Qiskit Runtime's](https://docs.www-dev.quantum-computing.ibm.com/api/qiskit-ibm-runtime/qiskit_ibm_runtime.Estimator) `Estimator` uses a complex algebraic process to estimate the expectation value on a real quantum device by breaking down the observable into a combination of other observables whose eigenbasis we do know.\n",
+    "However, calculating the expectation value of an observable is not always possible, as we often don't know its eigenbasis. The Qiskit Runtime [Estimator](/docs/api/qiskit-ibm-runtime/qiskit_ibm_runtime.Estimator) uses a complex algebraic process to estimate the expectation value on a real quantum device by breaking down the observable into a combination of other observables whose eigenbasis we do know.\n",
     "\n",
-    "In simpler terms, `Estimator` breaks down any observable that it doesn't know how to measure into simpler, measurable observables called [Pauli operators][pauli].\n",
+    "In simpler terms, Estimator breaks down any observable that it doesn't know how to measure into simpler, measurable observables called [Pauli operators][pauli].\n",
     "\n",
     "[pauli]: #definition-tooltip \"Set of matrices commonly used in quantum computing to represent and manipulate quantum states, consisting of the identity matrix and the three Pauli matrices (X, Y, and Z).\""
    ]
@@ -131,9 +131,9 @@
     "\n",
     "where $n$ is the number of qubits, $k \\equiv k_{n-1} \\cdots k_0$ for $k_l \\in \\mathbb{Z}_4 \\equiv \\{0, 1, 2, 3\\}$ (i.e. integers base $4$), and $(\\sigma_0, \\sigma_1, \\sigma_2, \\sigma_3) := (I, X, Y, Z)$.\n",
     "\n",
-    "After performing this decomposition, `Estimator` derives a new circuit $V_k|\\psi\\rangle$ for each observable $\\hat{P}_k$ (i.e. from the original circuit), to effectively *diagonalize* the Pauli observable in the computational basis and measure it. We can easily measure Pauli observables because we know $V_k$ ahead of time, which is not the case generally for other observables.\n",
+    "After performing this decomposition, Estimator derives a new circuit $V_k|\\psi\\rangle$ for each observable $\\hat{P}_k$ (i.e. from the original circuit), to effectively *diagonalize* the Pauli observable in the computational basis and measure it. We can easily measure Pauli observables because we know $V_k$ ahead of time, which is not the case generally for other observables.\n",
     "\n",
-    "For each $\\hat{P}_{k}$, the `Estimator` runs the corresponding circuit on a quantum device multiple times, measures the output state in the computational basis, and calculates the probability $p_{kj}$ of obtaining each possible output $j$. It then looks for the eigenvalue $\\lambda_{kj}$ of $P_k$ corresponding to each output $j$, multiplies by $w_k$, and adds all the results together to obtain the expected value of the observable $\\hat{H}$ for the given state $|\\psi\\rangle$.\n",
+    "For each $\\hat{P}_{k}$, the Estimator runs the corresponding circuit on a quantum device multiple times, measures the output state in the computational basis, and calculates the probability $p_{kj}$ of obtaining each possible output $j$. It then looks for the eigenvalue $\\lambda_{kj}$ of $P_k$ corresponding to each output $j$, multiplies by $w_k$, and adds all the results together to obtain the expected value of the observable $\\hat{H}$ for the given state $|\\psi\\rangle$.\n",
     "\n",
     "$$\n",
     "\\langle\\hat{H}\\rangle_\\psi =\n",
@@ -154,9 +154,9 @@
     }
    },
    "source": [
-    "Since calculating the expectation value of $4^n$ Paulis is impractical (i.e. exponentially growing), `Estimator` can only be efficient when a large amount of $w_k$ are zero (i.e. *sparse* Pauli decomposition instead of *dense*). Formally we say that, for this computation to be *efficiently solvable*, the number of non-zero terms has to grow at most polynomially with the number of qubits $n$: $\\hat{H} = \\sum^{\\text{Poly}(n)}_k w_k \\hat{P}_k.$\n",
+    "Since calculating the expectation value of $4^n$ Paulis is impractical (i.e. exponentially growing), Estimator can only be efficient when a large amount of $w_k$ are zero (i.e. *sparse* Pauli decomposition instead of *dense*). Formally we say that, for this computation to be *efficiently solvable*, the number of non-zero terms has to grow at most polynomially with the number of qubits $n$: $\\hat{H} = \\sum^{\\text{Poly}(n)}_k w_k \\hat{P}_k.$\n",
     "\n",
-    "The reader may notice the implicit assumption that probability [sampling][sampling] also needs to be efficient as explained for `Sampler`, which means\n",
+    "The reader may notice the implicit assumption that probability [sampling][sampling] also needs to be efficient as explained for Sampler, which means\n",
     "\n",
     "$$\n",
     "\\langle\\hat{H}\\rangle_\\psi =\n",
@@ -216,7 +216,8 @@
     "from qiskit import QuantumCircuit\n",
     "from qiskit.quantum_info import SparsePauliOp\n",
     "\n",
-    "# The following code will work for any other initial single-qubit state and observable\n",
+    "# The following code will work for any other\n"
+    "# initial single-qubit state and observable\n",
     "original_circuit = QuantumCircuit(1)\n",
     "original_circuit.h(0)\n",
     "\n",
@@ -289,7 +290,7 @@
    "id": "beef97f0-c968-4a3f-9b7b-fed39b88cbe3",
    "metadata": {},
    "source": [
-    "We can now carry out the computation manually using `Sampler` and check the results on `Estimator`:"
+    "We can now carry out the computation manually by using Sampler and check the results on Estimator:"
    ]
   },
   {
@@ -420,7 +421,7 @@
    "metadata": {
     "gloss": {
      "hermitian": {
-      "text": "A hermitian is a square matrix that is equal to its own conjugate transpose, or a linear operator that is self-adjoint.",
+      "text": "A Hermitian is a square matrix that is equal to its own conjugate transpose, or a linear operator that is self-adjoint.",
       "title": "Hermitian"
      }
     }
