Apply suggestions from code review
Co-authored-by: Rebecca Dimock <66339736+beckykd@users.noreply.github.com>

--- a/learning/courses/variational-algorithm-design/cost-functions.ipynb
+++ b/learning/courses/variational-algorithm-design/cost-functions.ipynb
@@ -1027,7 +1027,7 @@
     "\n",
     "![A graph showing how simulation cost varies with circuit complexity. Using a classical computer it grows exponentially. With quantum error mitigation, there should be a crossover at which that becomes advantageous. Quantum error correction allows for linear growth of the simulation cost and will certainly lead to advantage.](/learning/images/courses/variational-algorithm-design/cost-functions/cost-function-path-to-quantum-advantage.svg)\n",
     "\n",
-    "We can use Qiskit Runtime Primitive's error suppression and error mitigation options to address noise and maximize the utility of today's quantum computers."
+    "We can use Qiskit Runtime primitives' error suppression and error mitigation options to address noise and maximize the utility of today's quantum computers."
    ]
   },
   {
@@ -1043,14 +1043,14 @@
     }
    },
    "source": [
-    "### Error Suppression\n",
+    "### Error suppression\n",
     "\n",
-    "[Error suppression](https://docs.quantum.ibm.com/run/configure-runtime-compilation#set-the-optimization-level) refers to techniques used to optimize and transform a circuit during compilation in order to minimize errors. This is a basic error handling technique that usually results in some classical pre-processing [overhead][overhead] to the overall runtime. The overhead includes transpiling circuits to run on quantum hardware by:\n",
+    "[Error suppression](docs/guides/configure-runtime-compilation#set-the-optimization-level) refers to techniques used to optimize and transform a circuit during compilation in order to minimize errors. This is a basic error handling technique that usually results in some classical pre-processing [overhead][overhead] to the overall runtime. The overhead includes transpiling circuits to run on quantum hardware by:\n",
     "\n",
     "- Expressing the circuit using the native gates available on a quantum system\n",
     "- Mapping the virtual qubits to physical qubits\n",
     "- Adding SWAPs based on connectivity requirements\n",
-    "- Optimizing 1Q and 2Q gates\n",
+    "- Optimizing single-qubit and two-qubit gates\n",
     "- Adding dynamical decoupling to idle qubits to prevent the effects of decoherence.\n",
     "\n",
     "\n",
