--- a/learning/courses/variational-algorithm-design/cost-functions.ipynb
+++ b/learning/courses/variational-algorithm-design/cost-functions.ipynb
@@ -1149,7 +1149,7 @@
    "id": "38df43e8-b11e-4671-b8fb-7a2eb74f648a",
    "metadata": {},
    "source": [
-    "We can now use a pass manager to transpile the circuit into the \"instruction set architecture\" or ISA of the backend. This is a new requirement in Qiskit Runtime: all circuits submitted to a backend must conform to the constraints of the backend’s target, meaning they must be written in terms of the backend's ISA — i.e., the set of instructions the device can understand and execute. These target constraints are defined by factors like the device’s native basis gates, its qubit connectivity, and - when relevant - its pulse and other instruction timing specifications.\n",
+    "We can now use a pass manager to transpile the circuit into the \"instruction set architecture\" (ISA) of the backend. This is a new requirement in Qiskit Runtime: all circuits submitted to a backend must conform to the constraints of the backend’s target, meaning they must be written in terms of the backend's ISA — i.e., the set of instructions the device can understand and execute. These target constraints are defined by factors like the device’s native basis gates, and qubit connectivity.\n",
     "\n",
     "Note that in the present case, we will do this twice: once with optimization_level = 0, and once with it set to 3. Each time we will use the Estimator primitive to estimate the expectation values of the observable at different values of phase."
    ]
