Apply suggestions from code review
Co-authored-by: Rebecca Dimock <66339736+beckykd@users.noreply.github.com>

--- a/learning/courses/variational-algorithm-design/cost-functions.ipynb
+++ b/learning/courses/variational-algorithm-design/cost-functions.ipynb
@@ -1151,7 +1151,7 @@
    "source": [
     "We can now use a pass manager to transpile the circuit into the \"instruction set architecture\" (ISA) of the backend. This is a new requirement in Qiskit Runtime: all circuits submitted to a backend must conform to the constraints of the backend’s target, meaning they must be written in terms of the backend's ISA — i.e., the set of instructions the device can understand and execute. These target constraints are defined by factors like the device’s native basis gates, and qubit connectivity.\n",
     "\n",
-    "Note that in the present case, we will do this twice: once with optimization_level = 0, and once with it set to 3. Each time we will use the Estimator primitive to estimate the expectation values of the observable at different values of phase."
+    "Note that in the present case, we will do this twice: once with `optimization_level = 0`, and once with it set to `3`. Each time we will use the Estimator primitive to estimate the expectation values of the observable at different values of phase."
    ]
   },
   {
@@ -1177,7 +1177,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Use a pass manager to transpile the circuit and observable for the backend being simulated.\n",
+    "# Use a pass manager to transpile the circuit and observable for the backend\n",
+    "# being simulated.\n",
     "# Start with no optimization:\n",
     "\n",
     "from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager\n",
@@ -1251,9 +1252,9 @@
     }
    },
    "source": [
-    "### Error Mitigation\n",
+    "### Error mitigation\n",
     "\n",
-    "[Error mitigation](https://docs.quantum-computing.ibm.com/optimize/error-mitigation) refers to techniques that allow users to reduce circuit errors by modeling the device noise at the time of execution. Typically, this results in quantum pre-processing overhead related to model training and classical post-processing overhead to mitigate errors in the raw results by using the generated model.\n",
+    "[Error mitigation](/docs/guides/error-mitigation) refers to techniques that allow users to reduce circuit errors by modeling the device noise at the time of execution. Typically, this results in quantum pre-processing overhead related to model training and classical post-processing overhead to mitigate errors in the raw results by using the generated model.\n",
     "\n",
     "The Qiskit Runtime primitive's `resilience_level` option specifies the amount of resilience to build against errors. Higher levels generate more accurate results at the expense of longer processing times due to quantum sampling overhead. Resilience levels can be used to configure the trade-off between cost and accuracy when applying error mitigation to your primitive query.\n",
     "\n",
