Apply suggestions from code review
Co-authored-by: Rebecca Dimock <66339736+beckykd@users.noreply.github.com>

--- a/learning/courses/variational-algorithm-design/cost-functions.ipynb
+++ b/learning/courses/variational-algorithm-design/cost-functions.ipynb
@@ -1267,7 +1267,7 @@
     "\n",
     "### Twirled readout error extinction (T-REx)\n",
     "\n",
-    "Twirled readout error extinction (T-REx) uses a technique known as Pauli twirling to reduce the noise introduced during the process of quantum measurement. This technique assumes no specific form of noise, which makes it very general and effective.\n",
+    "T-REx uses a technique known as Pauli twirling to reduce the noise introduced during the process of quantum measurement. This technique assumes no specific form of noise, which makes it very general and effective.\n",
     "\n",
     "Overall workflow:\n",
     "\n",
@@ -1281,9 +1281,9 @@
     "\n",
     "We can set this with `options.resilience_level = 1`, demonstrated in the example below.\n",
     "\n",
-    "### Zero noise extrapolation\n",
+    "### Zero noise extrapolation (ZNE)\n",
     "\n",
-    "Zero noise extrapolation (ZNE) works by first amplifying the noise in the circuit that is preparing the desired quantum state, obtaining measurements for several different levels of noise, and using those measurements to infer the noiseless result.\n",
+    "ZNE works by first amplifying the noise in the circuit that is preparing the desired quantum state, obtaining measurements for several different levels of noise, and using those measurements to infer the noiseless result.\n",
     "\n",
     "Overall workflow:\n",
     "\n",
@@ -1295,7 +1295,7 @@
     "\n",
     "![A diagram showing steps in ZNE. Noise is artificially amplified by different factors. Then the values are extrapolated to what they should be at zero noise.](/learning/images/courses/variational-algorithm-design/cost-functions/cost-function-zne-stages.svg)\n",
     "\n",
-    "We can set this with `options.resilience_level = 2`. We can optimize this further by exploring a variety of `noise_factors`, `noise_amplifiers`, and `extrapolators`, but this is outside the scope of this course. We encourage you to experiment with these [options as described here](https://docs.quantum.ibm.com/run/configure-error-mitigation#advanced-resilience-options-v1-primitives).\n",
+    "We can set this with `options.resilience_level = 2`. We can optimize this further by exploring a variety of `noise_factors`, `noise_amplifiers`, and `extrapolators`, but this is outside the scope of this course. We encourage you to experiment with these options as described [here](/docs/guides/configure-error-mitigation#advanced-resilience-options-v1-primitives).\n",
     "\n",
     "Each method comes with its own associated overhead: a trade-off between the number of quantum computations needed (time) and the accuracy of our results:\n",
     "\n",
