Apply suggestions from code review
Co-authored-by: Rebecca Dimock <66339736+beckykd@users.noreply.github.com>

--- a/learning/courses/variational-algorithm-design/cost-functions.ipynb
+++ b/learning/courses/variational-algorithm-design/cost-functions.ipynb
@@ -1321,7 +1321,7 @@
    "source": [
     "### Using Qiskit Runtime's mitigation and suppression options\n",
     "\n",
-    "Here's how to calculate an expectation value while using error mitigation and suppression in Qiskit Runtime. We can make use of precisely the same circuit and observable as before, but this time keeping the optimization level fixed at level 2, and now tuning the _resilience_ or the error mitigation technique(s) being used. This error mitigation process occurs multiple times throughout an optimization loop.\n",
+    "Here's how to calculate an expectation value while using error mitigation and suppression in Qiskit Runtime. We can make use of precisely the same circuit and observable as before, but this time keeping the optimization level fixed at level 2, and now tuning the _resilience_ or the error mitigation techniques being used. This error mitigation process occurs multiple times throughout an optimization loop.\n",
     "\n",
     "We perform this part on real hardware, since error mitigation is not available on simulators."
    ]
@@ -1358,7 +1358,8 @@
     "exp_values_with_em1_es = []\n",
     "exp_values_with_em2_es = []\n",
     "\n",
-    "# Use a pass manager to optimize the circuit and observables for the backend chosen:\n",
+    "# Use a pass manager to optimize the circuit and observables\n",
+    "# for the backend chosen:\n",
     "\n",
     "pm = generate_preset_pass_manager(backend=backend, optimization_level=2)\n",
     "isa_circuit = pm.run(circuit)\n",
@@ -1451,11 +1452,11 @@
    "source": [
     "## Summary\n",
     "\n",
-    "With this lesson, you learned how to create a cost function:\n",
+    "With this lesson, you learned how to do the following:\n",
     "\n",
     "- Create a cost function\n",
-    "- How to leverage Qiskit Runtime primitives to mitigate and suppression noise\n",
-    "- How to define a measurement strategy to optimize speed vs accuracy\n",
+    "- Use Qiskit Runtime primitives to mitigate and suppress noise\n",
+    "- Define a measurement strategy to optimize speed vs accuracy\n",
     "\n",
     "Here's our high-level variational workload:\n",
     "\n",
