Apply suggestions from code review
Co-authored-by: Rebecca Dimock <66339736+beckykd@users.noreply.github.com>

--- a/learning/courses/variational-algorithm-design/reference-states.ipynb
+++ b/learning/courses/variational-algorithm-design/reference-states.ipynb
@@ -43,7 +43,7 @@
    "source": [
     "## Classical reference state\n",
     "\n",
-    "Suppose you have a $3$-qubit system and you want to start in the state $|001\\rangle$ instead of the default state $|000\\rangle$. This is an example of a purely classical reference state, and to construct it, you simply need to apply an [X gate](https://docs.quantum-computing.ibm.com/api/qiskit/qiskit.circuit.library.XGate) to qubit $0$ (following Qiskit's qubit ordering), as $|001\\rangle = X_0 |000\\rangle$.\n",
+    "Suppose you have a three-qubit system and you want to start in the state $|001\\rangle$ instead of the default state $|000\\rangle$. This is an example of a purely classical reference state, and to construct it, you simply need to apply an [X gate](/docs/api/qiskit/qiskit.circuit.library.XGate) to qubit $0$ (following Qiskit's qubit ordering), as $|001\\rangle = X_0 |000\\rangle$.\n",
     "\n",
     "In this case, our unitary operator is $U_R \\equiv X_0$, which leads to the reference state $|\\rho\\rangle \\equiv |001\\rangle$."
    ]
@@ -84,7 +84,7 @@
     "\n",
     "Suppose you aim to start with a more complex state that involves superposition and/or entanglement, such as $\\frac{1}{\\sqrt{2}}(|100\\rangle+|111\\rangle)$.\n",
     "\n",
-    "To obtain this state from $|000\\rangle$, one approach is to use a [Hadamard gate](https://docs.quantum-computing.ibm.com/api/qiskit/qiskit.circuit.library.HGate) on qubit $0$ ($H_0$), a [CNOT (CX)](https://docs.quantum-computing.ibm.com/api/qiskit/qiskit.circuit.library.CXGate) gate with qubit $0$ as the control qubit and qubit $1$ as the target qubit ($CNOT_{01}$), and finally an $X$ gate applied to qubit $2$ ($X_2$).\n",
+    "To obtain this state from $|000\\rangle$, one approach is to use a [Hadamard gate](/docs/api/qiskit/qiskit.circuit.library.HGate) on qubit $0$ ($H_0$), a [CNOT (CX)](/docs/api/qiskit/qiskit.circuit.library.CXGate) gate with qubit $0$ as the control qubit and qubit $1$ as the target qubit ($CNOT_{01}$), and finally an $X$ gate applied to qubit $2$ ($X_2$).\n",
     "\n",
     "In this scenario, our unitary operator is $U_{R} \\equiv X_2CNOT_{01}H_0|000\\rangle$, and our reference state is $|\\rho\\rangle \\equiv \\frac{1}{\\sqrt{2}}(|100\\rangle+|111\\rangle)$."
    ]
@@ -123,7 +123,7 @@
    "source": [
     "## Constructing Reference States using template circuits\n",
     "\n",
-    "We can also use various template circuits, such as [`TwoLocal`](https://docs.quantum-computing.ibm.com/api/qiskit/qiskit.circuit.library.TwoLocal) which allows for expressing multiple tunable parameters and entanglements with ease. We will cover these template circuits in more detail in the next lesson, but we can use them for our reference states *if* we bind the parameters.:"
+    "We can also use various template circuits, such as [`TwoLocal`](/docs/api/qiskit/qiskit.circuit.library.TwoLocal) which allows for expressing multiple tunable parameters and entanglements with ease. We will cover these template circuits in more detail in the next lesson, but we can use them for our reference states *if* we bind the parameters:"
    ]
   },
   {
@@ -170,7 +170,7 @@
    "id": "3229a734-9c4a-4747-8118-faddfc7dac47",
    "metadata": {},
    "source": [
-    "### Quantum Machine Learning\n",
+    "### Quantum machine learning\n",
     "\n",
     "In the context of a variational quantum classifier (VQC), the training data is encoded into a quantum state with a parameterized circuit known as a *feature map*, where each parameter value represents a data point from the training dataset. The ZZFeatureMap is a type of parameterized circuit that can be utilized to pass our data points ($x$) to this feature map."
    ]
