Apply suggestions from code review
Co-authored-by: Rebecca Dimock <66339736+beckykd@users.noreply.github.com>

--- a/learning/courses/variational-algorithm-design/instances-and-extensions.ipynb
+++ b/learning/courses/variational-algorithm-design/instances-and-extensions.ipynb
@@ -42,7 +42,7 @@
    "metadata": {},
    "source": [
     "### Step 1: Map classical inputs to a quantum problem\n",
-    "### VQE's theoretical layout\n",
+    "### Theoretical layout\n",
     "\n",
     "VQE's layout is simple:\n",
     "\n",
@@ -70,7 +70,7 @@
    "id": "ee353736-d996-4c96-bac5-15b144da9a74",
    "metadata": {},
    "source": [
-    "### VQE Implementation"
+    "### Implementation"
    ]
   },
   {
@@ -206,7 +206,7 @@
    "source": [
     "### Step 2: Optimize problem for quantum execution\n",
     "\n",
-    "We will select the least-busy backend, and import the necessary components form qiskit_ibm_runtime."
+    "We will select the least-busy backend, and import the necessary components from `qiskit_ibm_runtime`."
    ]
   },
   {
@@ -262,9 +262,9 @@
    "id": "07772b29-e880-476c-a4bc-07f7591ad969",
    "metadata": {},
    "source": [
-    "### Step 3: Execute using Qiskit Runtime Primitives\n",
+    "### Step 3: Execute using Qiskit Runtime primitives\n",
     "\n",
-    "We are now ready to run our calculation on IBM Quantum&trade; hardware. Because the cost function minimization is highly iterative, we will start a Runtime session. This way, we will only have to wait in a queue once. Once the job begins running, each iteration with updates to parameters will run immediately."
+    "We are now ready to run our calculation on IBM Quantum&reg; hardware. Because the cost function minimization is highly iterative, we will start a Runtime session. This way, we will only have to wait in a queue once. Once the job begins running, each iteration with updates to parameters will run immediately."
    ]
   },
   {
@@ -354,9 +354,9 @@
     "\n",
     "Applying the same argument to the rest of the terms, the next priority would then be the term with weight $w_1$, so $U_{V}(\\vec{\\theta})|\\rho_1 \\rangle$ would be the eigenstate corresponding to $\\lambda_1$, and the other terms would be contained in the eigenspace of $\\{\\lambda_2,...,\\lambda_{N-1}\\}$.\n",
     "\n",
-    "By reasoning inductively, we deduce that $U_{V}(\\vec{\\theta})|\\rho_j \\rangle$ will be an approximate eigenstate of $\\lambda_j$ for $0\\leq j < k$.\n",
+    "By reasoning inductively, we deduce that $U_{V}(\\vec{\\theta})|\\rho_j \\rangle$ will be an approximate eigenstate of $\\lambda_j$ for $0\\leq j < k.$\n",
     "\n",
-    "### SSVQE's Theoretical Layout\n",
+    "### Theoretical layout\n",
     "\n",
     "SSVQE's can be summarized as follows:\n",
     "\n",
@@ -371,7 +371,7 @@
     "- Repeat the above steps until convergence is achieved.\n",
     "\n",
     "\n",
-    "You will be re-constructing SSVQE's cost function in the assessment, but we have the following snippet to motivate your solution:"
+    "You will be reconstructing SSVQE's cost function in the assessment, but we have the following snippet to motivate your solution:"
    ]
   },
   {
@@ -391,7 +391,8 @@
     "\n",
     "    # Parameters:\n",
     "    #     params (ndarray): Array of ansatz parameters\n",
-    "    #     initialized_anastz_list (list QuantumCircuit): Array of initialised ansatz with reference\n",
+    "    #     initialized_anastz_list (list QuantumCircuit): \n",
+    "Array of initialized ansatz with reference\n",
     "    #     weights (list): List of weights\n",
     "    #     ansatz (QuantumCircuit): Parameterized ansatz circuit\n",
     "    #     hamiltonian (SparsePauliOp): Operator representation of Hamiltonian\n",
@@ -516,7 +517,7 @@
    "id": "bfc019b0-518f-48cb-a37b-f05f6cfa7929",
    "metadata": {},
    "source": [
-    "### VQD's Theoretical Layout\n",
+    "### Theoretical layout\n",
     "\n",
     "VQD's layout can be summarized as follows:\n",
     "\n",
@@ -536,7 +537,7 @@
    "id": "bc6fa596-31ce-4b55-9d72-6c8b92aa8698",
    "metadata": {},
    "source": [
-    "### VQD's Implementation\n",
+    "### Implementation\n",
     "\n",
     "For this implementation, we'll create a function for an overlap penalty. This penalty will be used in the cost function at each iteration. This process will be repeated for each excited state"
    ]
@@ -571,7 +572,7 @@
    "id": "20934503-046f-4daa-b99c-43c99060b46d",
    "metadata": {},
    "source": [
-    "First, we'll setup a function that calculates the state fidelity -- a percentage of overlap between two states that we'll use as a penalty for VQD:"
+    "First, we'll set up a function that calculates the state fidelity -- a percentage of overlap between two states that we'll use as a penalty for VQD:"
    ]
   },
   {
@@ -656,7 +657,7 @@
    "id": "6be376ac-cfef-4151-841c-d93fcbeb6c76",
    "metadata": {},
    "source": [
-    "Note especially that the cost function above refers to the calculate_overlaps function, which actually creates a new quantum circuit. If we want to run on real hardware, that new circuit must also be transpiled, hopefully in an optimal way, to run on the backend we select. Note that transpilation has been built in to the calculate_overlaps or cost_func_vqd functions. Feel free to try modifying the code yourself to build in this additional (and conditional) transpilation - but this will also be done for you in the next lesson.\n",
+    "Note especially that the cost function above refers to the `calculate_overlaps` function, which actually creates a new quantum circuit. If we want to run on real hardware, that new circuit must also be transpiled, hopefully in an optimal way, to run on the backend we select. Note that transpilation has been built in to the `calculate_overlaps` or `cost_func_vqd` functions. Feel free to try modifying the code yourself to build in this additional (and conditional) transpilation - but this will also be done for you in the next lesson.\n",
     "\n",
     "In this lesson, we will run the VQD algorithm using the Statevector Sampler and Statevector Estimator:"
    ]
@@ -792,7 +793,7 @@
    "source": [
     "The values we obtained from the cost function are approximately -6.00, 4.02, and 5.61. The important thing about these results is that the function values are increasing. If we had obtained a first excited state that is lower in energy than our initial, unconstrained calculation of the ground state, that would have indicated an error somewhere in our code.\n",
     "\n",
-    "The values of x are the parameters that yielded a statevector corresponding to each of these costs/energies.\n",
+    "The values of x are the parameters that yielded a statevector corresponding to each of these costs (energies).\n",
     "\n",
     "Finally, we note that all three minimizations converged to within the default tolerance of the classical optimizer (here COBYLA). They required 131, 110, and 90 function evaluations, respectively."
    ]
@@ -805,7 +806,7 @@
    "source": [
     "## Quantum Sampling Regression (QSR)\n",
     "\n",
-    "One of the main issues with VQE is the multiple calls to a quantum computer that are required to obtain the parameters for each step, including $k$, $k-1$, etc. This is especially problematic when access to quantum devices is queued. While a [`Session`](https://docs.quantum-computing.ibm.com/run/sessions) can be used to group multiple iterative calls, an alternative approach is to use sampling. By utilizing more classical resources, we can complete the full optimization process in a single call. This is where [Quantum Sampling Regression](https://arxiv.org/pdf/2012.02338) comes into play. Since access to quantum computers is still a low-offer/high-demand commodity, we find this trade-off to be both possible and convenient for many current studies. This approach harnesses all available classical capabilities while still capturing many of the inner workings and intrinsic properties of quantum computations that do not appear in simulation.\n",
+    "One of the main issues with VQE is the multiple calls to a quantum computer that are required to obtain the parameters for each step, including $k$, $k-1$, etc. This is especially problematic when access to quantum devices is queued. While a [`Session`](/docs/guides/sessions) can be used to group multiple iterative calls, an alternative approach is to use sampling. By utilizing more classical resources, we can complete the full optimization process in a single call. This is where [Quantum Sampling Regression](https://arxiv.org/pdf/2012.02338) comes into play. Since access to quantum computers is still a low-offer/high-demand commodity, we find this trade-off to be both possible and convenient for many current studies. This approach harnesses all available classical capabilities while still capturing many of the inner workings and intrinsic properties of quantum computations that do not appear in simulation.\n",
     "\n",
     "![A diagram showing how QSR uses the components of a variational algorithm.](/learning/images/courses/variational-algorithm-design/instances-and-extensions/instances-qsr.svg)\n",
     "\n",
@@ -854,8 +855,8 @@
     "\n",
     "where $S_{\\max} = \\max_i(S_i)$. Furthermore, adjusting $S_{\\max}$ as a tunable parameter (instead of inferring it) opens up new possibilities, such as:\n",
     "\n",
-    "- **Over-sampling**: to improve accuracy.\n",
-    "- **Under-sampling**: to boost performance by reducing runtime overhead or eliminating local minima."
+    "- **Over-sampling** to improve accuracy.\n",
+    "- **Under-sampling** to boost performance by reducing runtime overhead or eliminating local minima."
    ]
   },
   {
@@ -863,16 +864,16 @@
    "id": "cd5399d1-8166-42e5-938c-fb2e2d600cb3",
    "metadata": {},
    "source": [
-    "### QSR's Theoretical Layout\n",
+    "### Theoretical layout\n",
     "\n",
     "QSR's layout can be summarized as follows:\n",
     "\n",
-    "- Prepare reference operators $U_R$\n",
+    "- Prepare reference operators $U_R$.\n",
     "  - We'll go from the state $|0\\rangle$ to the reference state $|\\rho\\rangle$\n",
-    "- Apply the  variational form $U_V(\\vec\\theta_{i,j})$ to create an ansatz $U_A(\\vec\\theta_{i,j})$\n",
+    "- Apply the  variational form $U_V(\\vec\\theta_{i,j})$ to create an ansatz $U_A(\\vec\\theta_{i,j})$.\n",
     "  - Determine the bandwidth associated with each parameter in the ansatz. An upper bound is sufficient.\n",
-    "- Bootstrap at $i=0$ if we have a similar problem (typically found via classical simulation or sampling)\n",
-    "- Sample the cost function $C(\\vec\\theta) := a_0 + \\sum_{k=1}^S[a_k\\cos(k\\theta)+ b_k\\sin(k\\theta)]$ at least $T$ times\n",
+    "- Bootstrap at $i=0$ if we have a similar problem (typically found by classical simulation or sampling).\n",
+    "- Sample the cost function $C(\\vec\\theta) := a_0 + \\sum_{k=1}^S[a_k\\cos(k\\theta)+ b_k\\sin(k\\theta)]$ at least $T$ times.\n",
     "  - $T=\\prod_{i=1}^k(2S_i+1)\\leq \\prod_{i=1}^k(2S_{max}+1) = (2S_{max}+1)^n$\n",
     "  - Decide whether to over-sample/under-sample to balance speed vs accuracy by adjusting $T$.\n",
     "- Compute the Fourier coefficients from the samples (i.e., solve the normalized linear system of equations).\n",
