--- a/learning/courses/variational-algorithm-design/variational-algorithms.ipynb
+++ b/learning/courses/variational-algorithm-design/variational-algorithms.ipynb
@@ -27,7 +27,7 @@
     "\n",
     "- Each step in the variational algorithm design workflow\n",
     "- Trade-offs associated with each step\n",
-    "- How to use [Qiskit Runtime primitives](docs/guides/primitives) to optimize for speed and accuracy\n",
+    "- How to use [Qiskit Runtime primitives](/docs/guides/primitives) to optimize for speed and accuracy\n",
     "\n",
     "While this course is meant to be a starting place for researchers and developers to explore the utility of quantum computers, feel free to explore the theoretical and foundational knowledge around quantum computing in general in the [Basics of Quantum Information and Computation](/learning/courses/basics-of-quantum-information) (also available as [a series of YouTube videos](https://www.youtube.com/playlist?list=PLOFEBzvs-VvqKKMXX4vbi4EB1uaErFMSO)).\n",
     "\n",
