--- a/docs/guides/instances.ipynb
+++ b/docs/guides/instances.ipynb
@@ -149,10 +149,10 @@
     "\n",
     "</LegacyContent>\n",
     "<CloudContent>\n",
-    "You can use the CRN or instance name to specify an instance to use; either when initializing the service or when sending the workload to a QPU.  When an instance is passed in, only backends and jobs from that instance are available.\n",
+    "You can use the CRN or instance name to specify an instance to use; either when initializing the service (for example, `service = QiskitRuntimeService(token=\"<IBM Cloud API key>\", instance=\"<CRN or instance name>\" )`) or when sending the workload to a QPU (for example, `service.backend(name=\"<backend_name>\", instance=\"<CRN>\")`).  When an instance is passed in, only backends and jobs from that instance are available.\n",
     "\n",
     "<Admonition type=\"note\">\n",
-    "If an instance is not included, all backends and jobs across all instances in your account are available. In this case, when a backend is specified, an instance that can access the backend is found and used in the following order:\n",
+    "If an instance is not included when initializing the service, all backends and jobs across all instances in your account are available. In this case, when a backend is specified, an instance that can access the backend is found and used in the following order:\n",
     "\n",
     "1. If your account only has access to one instance, it is selected by default.\n",
     "1. If an instance was passed into [`save_account()`,](/docs/api/qiskit-ibm-runtime/qiskit-runtime-service#save_account) it is used.\n",
