fix link syntax

--- a/docs/guides/composer.mdx
+++ b/docs/guides/composer.mdx
@@ -725,7 +725,7 @@ In IBM Quantum Composer, the default value for `angle` is $\pi/2$.
 
 The simplified Toffoli gate, also referred to as Margolus gate.
 
-The simplified Toffoli gate implements the Toffoli gate up to relative phases. This implementation requires three CX gates, which is the minimal amount possible, as shown in <https://arxiv.org/abs/quant-ph/0312225>. Note that the simplified Toffoli is not equivalent to the Toffoli, but can be used in places where the Toffoli gate is uncomputed again.
+The simplified Toffoli gate implements the Toffoli gate up to relative phases. This implementation requires three CX gates, which is the minimal amount possible, as shown in https://arxiv.org/abs/quant-ph/0312225. Note that the simplified Toffoli is not equivalent to the Toffoli, but can be used in places where the Toffoli gate is uncomputed again.
 
 | Composer reference                        | OpenQASM reference | Q-Sphere | Note about q-sphere representations                                                                                                                                                                                                     |
 | ----------------------------------------- | ------------------ | ---------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
