--- a/learning/courses/quantum-machine-learning/exam.mdx
+++ b/learning/courses/quantum-machine-learning/exam.mdx
@@ -15,4 +15,4 @@ The exam consists of 20 questions, and you must answer at least 16 correctly to 
 
 Make sure you're ready to take the exam. If you don't receive a passing score in two attempts, the exam becomes temporarily locked.
 
-<LaunchExamButton href="https://learn.ibm.com/course/view.php?id=17760" />
+<LaunchExamButton href="https://www.ibm.com/training/course/quantum-machine-learning-badge-quiz-DL46107G" />
