bisected whole file. Builds locally. No syntax issue. Never changed anything.

--- a/learning/courses/variational-algorithm-design/instances-and-extensions.ipynb
+++ b/learning/courses/variational-algorithm-design/instances-and-extensions.ipynb
@@ -6,11 +6,11 @@
    "id": "453ab30f-a0c6-448b-8579-710968b0f288",
    "metadata": {},
    "source": [
-    "{/* cspell:ignore disp SSVQE's forall */}\n",
+    "{/* cspell: ignore disp SSVQE's forall */}\n",
     "\n",
     "# Instances and extensions\n",
     "\n",
-    "This chapter will cover several quantum variational algorithms, including:\n",
+    "This chapter will cover several quantum variational algorithms, including\n",
     "\n",
     "* [Variational Quantum Eigensolver (VQE)](https://arxiv.org/abs/1304.3061)\n",
     "* [Subspace Search VQE (SSVQE)](https://arxiv.org/abs/1810.09434)\n",
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "db20526e-48d4-44eb-9d2b-6c5d2ce5777e",
    "metadata": {},
    "outputs": [
@@ -109,6 +109,7 @@
     "    entanglement=\"linear\",\n",
     "    reps=1,\n",
     ")\n",
+    "\n",
     "ansatz = reference_circuit.compose(variational_form)\n",
     "\n",
     "ansatz.decompose().draw(\"mpl\")"
