--- a/docs/tutorials/multi-product-formula.ipynb
+++ b/docs/tutorials/multi-product-formula.ipynb
@@ -2544,6 +2544,9 @@
   }
  ],
  "metadata": {
+  "title": "Multi-product formula reduce Trotter error",
+  "description": "Multi-product formulas can be used in observable estimation to reduce Trotter error or to implement time-evolution with fixed Trotter error in lower depth.",
+  "platform": "cloud",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
