Update multi-product-formula.ipynb title

--- a/docs/tutorials/multi-product-formula.ipynb
+++ b/docs/tutorials/multi-product-formula.ipynb
@@ -5,7 +5,7 @@
    "id": "9857bace",
    "metadata": {},
    "source": [
-    "# Improve accuracy of observable dynamics with multi-product formulas"
+    "# Multi-product formula to reduce Trotter error"
    ]
   },
   {
