--- a/learning/courses/quantum-chem-with-vqe/exam.mdx
+++ b/learning/courses/quantum-chem-with-vqe/exam.mdx
@@ -15,4 +15,4 @@ The exam consists of 20 questions, and you must answer at least 16 correctly to 
 
 Make sure you're ready to take the exam. If you don't receive a passing score in two attempts, the exam becomes temporarily locked.
 
-<LaunchExamButton href="https://learn.ibm.com/course/view.php?id=17663" />
+<LaunchExamButton href="https://www.ibm.com/training/course/quantum-chemistry-with-vqe-badge-quiz-DL46105G" />
