--- a/docs/guides/instances.ipynb
+++ b/docs/guides/instances.ipynb
@@ -149,15 +149,21 @@
     "\n",
     "</LegacyContent>\n",
     "<CloudContent>\n",
-    "You can use the CRN or instance name to specify an instance to use; either when initializing the service (for example, `service = QiskitRuntimeService(token=\"<IBM Cloud API key>\", instance=\"<CRN or instance name>\" )`) or when sending the workload to a QPU (for example, `service.backend(name=\"<backend_name>\", instance=\"<CRN>\")`).  When an instance is passed in, only backends and jobs from that instance are available.\n",
+    "You can use the CRN or instance name to specify an instance to use; either when initializing the service (for example, `service = QiskitRuntimeService(token=\"<IBM Cloud API key>\", instance=\"<CRN or instance name>\" )`) or when sending the workload to a QPU (for example, `service.backend(name=\"<backend_name>\", instance=\"<CRN>\")`).  When an instance is passed in, only backends and jobs from that instance are available. (allowed in Qiskit Runtime v0.40.1 and later)\n",
     "\n",
-    "<Admonition type=\"note\">\n",
     "If an instance is not included when initializing the service, all backends and jobs across all instances in your account are available. In this case, when a backend is specified, an instance that can access the backend is found and used in the following order:\n",
     "\n",
     "1. If your account only has access to one instance, it is selected by default.\n",
     "1. If an instance was passed into [`save_account()`,](/docs/api/qiskit-ibm-runtime/qiskit-runtime-service#save_account) it is used.\n",
     "2. If your account has access to multiple instances but only one can access the requested QPU, the instance with access is selected. If this instance is not associated with a free plan, a cost will be incurred.\n",
     "3. If your account has access to multiple instances that can access the requested QPU, the system uses your specified plan preferences (set on the [`QiskitRuntimeService()`](/docs/api/qiskit-ibm-runtime/qiskit-runtime-service#qiskitruntimeservice) initializer or the [`save_account()`](/docs/api/qiskit-ibm-runtime/qiskit-runtime-service#save_account) method) to choose a plan and instance.\n",
+    "\n",
+    "<Admonition type=\"important\">\n",
+    "Qiskit Runtime v0.40.1 and later is required for the following:\n",
+    "\n",
+    "    - Using the instance name to specify an instance \n",
+    "    - Not passing in an instance \n",
+    "    - Setting a preferred instance type and region \n",
     "</Admonition>\n",
     "\n",
     "The instance's CRN is listed on the [Platform dashboard](https://quantum.cloud.ibm.com/). Before running the below code, follow the steps to [save an account.](/docs/guides/cloud-setup#cloud-save)\n",
@@ -220,6 +226,11 @@
     "</Admonition>\n",
     "</CloudContent>"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
