--- a/learning/courses/variational-algorithm-design/instances-and-extensions.ipynb
+++ b/learning/courses/variational-algorithm-design/instances-and-extensions.ipynb
@@ -392,8 +392,7 @@
     "\n",
     "    # Parameters:\n",
     "    #     params (ndarray): Array of ansatz parameters\n",
-    "    #     initialized_anastz_list (list QuantumCircuit):\n",
-    "Array of initialized ansatz with reference\n",
+    "    #     initialized_anastz_list (list QuantumCircuit): Array of initialised ansatz with reference\n",
     "    #     weights (list): List of weights\n",
     "    #     ansatz (QuantumCircuit): Parameterized ansatz circuit\n",
     "    #     hamiltonian (SparsePauliOp): Operator representation of Hamiltonian\n",
