--- a/docs/guides/instances.ipynb
+++ b/docs/guides/instances.ipynb
@@ -149,7 +149,7 @@
     "\n",
     "</LegacyContent>\n",
     "<CloudContent>\n",
-    "You can use the CRN or instance name to specify an instance to use; either when initializing the service (for example, `service = QiskitRuntimeService(token=\"<IBM Cloud API key>\", instance=\"<CRN or instance name>\" )`) or when sending the workload to a QPU (for example, `service.backend(name=\"<backend_name>\", instance=\"<CRN>\")`).  When an instance is passed in, only backends and jobs from that instance are available. (allowed in Qiskit Runtime v0.40.1 and later)\n",
+    "You can use the CRN or instance name to specify an instance to use - either when initializing the service (for example, `service = QiskitRuntimeService(token=\"<IBM Cloud API key>\", instance=\"<CRN or instance name>\" )`), or when sending the workload to a QPU (for example, `service.backend(name=\"<backend_name>\", instance=\"<CRN>\")`).  When an instance is passed in, only backends and jobs from that instance are available (allowed in Qiskit Runtime v0.40.1 and later).\n",
     "\n",
     "If an instance is not included when initializing the service, all backends and jobs across all instances in your account are available. In this case, when a backend is specified, an instance that can access the backend is found and used in the following order:\n",
     "\n",
